# tcp-chat

./: .gitignore  CMakeLists.txt  todo
chatillo/: CMakeLists.txt
chatillo/include/: connection.hpp  packet.hpp  packetmanager.hpp  packetstructure.hpp  packettype.hpp  socket.hpp
chatillo/src/: packet.cpp  packet.hpp  packetmanager.cpp  packetstructure.cpp  packettype.hpp  socket.cpp
client/: CMakeLists.txt
client/src/: application.cpp  application.hpp  client.cpp  client.hpp  config.cpp  config.hpp  main.cpp
client/src/ui/: components.cpp  components.hpp  window.cpp  window.hpp
client/src/ui/components/: button.cpp  button.hpp  component.hpp  components.cpp  components.hpp  label.cpp  label.hpp  listbox.cpp  listbox.hpp  textarea.cpp  textarea.hpp  textfield.cpp  textfield.hpp
client/src/ui/configwindow/: configwindow.cpp  configwindow.hpp  configwindowcomponents.cpp  configwindowcomponents.hpp
client/src/ui/mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindowcomponents.cpp  mainwindowcomponents.hpp
client/src/util/: exception.hpp  style.hpp
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.hpp
src/chatillo/: test.cpp  test.hpp
src/client/ui/: window.cpp  window.hpp
src/client/ui/components/: button.cpp  button.hpp  component.hpp  components.cpp  components.hpp  textfield.cpp  textfield.hpp
src/client/util/: event.hpp  types.hpp
src/server/: main.cpp
